tests/outref/TCF024.ref

-- TCF024 : OCTO562 : CREATE FUNCTION supports function overloading

CREATE FUNCTION OVERLOADEDFUNC (INTEGER, NUMERIC, VARCHAR) RETURNS VARCHAR AS $$^OVERLOADEDFUNC;
CREATE FUNCTION OVERLOADEDFUNC (NUMERIC, NUMERIC, VARCHAR) RETURNS VARCHAR AS $$^OVERLOADEDFUNC;
CREATE FUNCTION OVERLOADEDFUNC (VARCHAR, INTEGER) RETURNS VARCHAR AS $$^OVERLOADEDFUNC;
-- Since return types are not considered when distinguishing overloaded functions, only the most recently defined return type will be used
CREATE FUNCTION OVERLOADEDFUNC (BOOLEAN) RETURNS VARCHAR AS $$^OVERLOADEDFUNC;
CREATE FUNCTION OVERLOADEDFUNC (BOOLEAN) RETURNS BOOLEAN AS $$^OVERLOADEDFUNC;

-- Parameter types: INTEGER, NUMERIC, VARCHAR
SELECT OVERLOADEDFUNC(1, 2.5, 'hello') FROM names;

-- Parameter types: NUMERIC, NUMERIC, VARCHAR
SELECT OVERLOADEDFUNC(1.2, 2.5, 'hello') FROM names;

-- Parameter types: VARCHAR, INTEGER
SELECT OVERLOADEDFUNC('hello', 2) FROM names;

-- Parameter type: BOOLEAN; return type: BOOLEAN
SELECT OVERLOADEDFUNC(true) FROM names;

-- Parameter type: BOOLEAN; return type: BOOLEAN
SELECT  * FROM names where firstname = OVERLOADEDFUNC(true);

OVERLOADEDFUNC
12.5hello
12.5hello
12.5hello
12.5hello
12.5hello
12.5hello
(6 rows)
OVERLOADEDFUNC
1.22.5hello
1.22.5hello
1.22.5hello
1.22.5hello
1.22.5hello
1.22.5hello
(6 rows)
OVERLOADEDFUNC
hello2
hello2
hello2
hello2
hello2
hello2
(6 rows)
OVERLOADEDFUNC
1
1
1
1
1
1
(6 rows)
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left VARCHAR, right BOOLEAN
Error with syntax near (line 1, column 28):

SELECT  * FROM names where firstname = OVERLOADEDFUNC(true);
                           ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT  * FROM names where firstname = OVERLOADEDFUNC(true);
